# reuleaux

./: .travis.yml  CMakeLists.txt  README.md  package.xml
base_placement_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml
base_placement_plugin/include/base_placement_plugin/: add_robot_base.h  add_way_point.h  create_marker.h  place_base.h  point_tree_item.h  point_tree_model.h
base_placement_plugin/include/base_placement_plugin/widgets/: base_placement_widget.h
base_placement_plugin/launch/: base_placement.launch  moveit_pkgs.launch
base_placement_plugin/rviz/: base_placement.rviz
base_placement_plugin/scripts/: helper.bash
base_placement_plugin/src/: add_robot_base.cpp  add_way_point.cpp  create_marker.cpp  place_base.cpp  point_tree_item.cpp  point_tree_model.cpp
base_placement_plugin/src/widgets/: base_placement_widget.cpp  base_placement_widget.ui
include/reuleaux/: dataset.h  kinematics.h  mh5_ikfast.cpp  sphere_discretization.h
launch/: show_arrow.launch  show_spheres.launch  show_ws_color.launch
map_creator/: CMakeLists.txt  README.md  package.xml
map_creator/include/map_creator/: hdf5_dataset.h  ikfast.h  kinematics.h  mh5_ikfast.cpp  sphere_discretization.h  ur5_ikfast.cpp
map_creator/maps/: motoman_mh5_r1_capability.h5  motoman_sia10f_r0.08_Inv_reachability.h5  motoman_sia10f_r0.08_reachability.h5
map_creator/msg/: WorkSpace.msg  WsSphere.msg  capShape.msg  capability.msg
map_creator/src/: create_base_place_map.cpp  create_capability_map.cpp  create_inverse_reachability_map.cpp  create_reachability_map.cpp  find_base_byAverage.cpp  find_base_byGraspReachabilityScore.cpp  find_base_byIKSolutionScore.cpp  find_base_byPCA.cpp  hdf5_dataset.cpp  kinematics.cpp  load_capability_map.cpp  load_reachability_map.cpp  show_base.cpp  show_grasp_pose.cpp  sphere_discretization.cpp
map_creator/test/: utest.cpp
msg/: PointColor.msg  WorkSpace.msg  WsColor.msg
reuleaux/: CMakeLists.txt  package.xml
rviz/: workspace_arrow.rviz  workspace_sphere.rviz  ws_sphere_arrow_color.rviz
scripts/: get_data.py  get_orientation.py
src/: create_capability.cpp  create_capability_map.cpp  create_discretized_sphere.cpp  create_maps.cpp  create_pose_and_show.cpp  create_sphere_and_arrow.cpp  create_sphere_and_arrow_color.cpp  create_sphere_and_show.cpp  kinematics.cpp  rand_orientation_generator.cpp  rand_pos_generator.cpp  show_arrow.cpp  show_cone.cpp  show_discretized_sphere.cpp  show_sphere.cpp  show_sphere_and_arrow.cpp  show_sphere_and_arrow_color.cpp  sphere_discretization.cpp
workspace_visualization/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
workspace_visualization/src/: capability_map_display.cpp  capability_map_display.h  capability_map_visual.cpp  capability_map_visual.h  reachability_map_display.cpp  reachability_map_display.h  reachability_map_visual.cpp  reachability_map_visual.h
